@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-07-2005 added: Window methods getResolution() and setCoordinateResolution() to python interface.  Should allow XBMC to scale control sizes and positions, removing the burden off python coders.
  - 30-06-2005 added: Background thumb reader for My Pictures.  Creates thumbs on enter of dir in the background as needed.
  - 30-06-2005 fixed: nfo files weren't being utilized if available for movie information.
  - 30-06-2005 changed: Image library moved into a dll.  Means smaller xbe, and faster image loading and tag generation off network shares due to not having to cache pictures locally before displaying them.  Requires ImageLib.dll to be in system folder.
